--- a/data/Evernight.wiki
+++ b/data/Evernight.wiki
@@ -36,14 +36,19 @@ Weenies: - alley wreches(from Mordekeinen's) wandering in packs of about 15-20 r
     -Small Corpse: 20g (goblins/dwarves)
     -Medium Corpse: 40g (most humanoids)
     -Large Corpse: 80g (ogres)
+    -Bodily Fluids
+      -Stomach Acid, Blood, 
+    -Bones
         
 ++++[Lamantha]'s mortuary
     A place for undead folk to heal themselves, usually supplying the corpse they'd like a limb from, or simply getting some stitching or reattachment done. 
     -reattach or correct a body part: 10g
-    -replacements: 20g        
+    -replacements: 20g   
+    -a room to rest/fix one's self: 5s per night per person     
         
 ++++Portal to Acheron
     A large red cube is underground in a temple, and heavily guarded by Fire Giants, the lava river that goes through the city goes down a channel that flows into the cube. On the other side of the cube, is [Kadi]'s strongest bastion in [Acheron]. Fire Giants only speak giant, and are very proud about it
+        Stairs built for giants, 3ft tall
         
 ++++The Dump
     bodily remains, chemicals, trash are dumped here to flow into [Cess]
