--- a/data/Holy Tome of the Order of Steel.wiki
+++ b/data/Holy Tome of the Order of Steel.wiki
@@ -8,4 +8,4 @@ Might, Strength, Persistence, Strict. Laws must be enforced, and peace will be w
 
 Magic is banned and punishable by death, those who harness it are always irresponsible and are followed by death and destruction for all. [Venril Sathir] is the only being worthy of harnessing this power.
 
-[Venril Sathir] raised the great volcano of [Kunark] to subjugate the orc diety of [Gruumsh], it's said that each eruption is a cry from him in agony to his cursed fate. 
+[Venril Sathir] raised the great volcano of [Kunark] to subjugate the orc diety of [Gruumsh], it's said that each eruption is a cry from him in agony to his cursed fate. The volcano, being a creation that taunted [Gruumsh] in power, force, and intimidation, proved to be a perfect trap.
