--- a/data/Luthadel.wiki
+++ b/data/Luthadel.wiki
@@ -36,6 +36,8 @@ city square
 ++++Temple of the [Order of Steel]   
     -main one by the God King's Palace where [Head Bishop Skarjun] resides
         -underneath the stone slab floor, buried for centuries is a 20ft by 20ft red cube portal to the [Acheron] realm.
+        -decorated with imagry of [Venril Sathir]'s subdoing of [Gruumsh], forcing him to stone. 
+        -draconic engravings telling the tale of [Venril Sathir] creating a geographical trap of the Ash Mount
 ++++Skaa Temple North
      8 [Steel Inquisitor]s and many Brothers from the [Order of Steel]
        -holding place of the mortal who ascended to godhood, [Velsharoon]
