--- a/data/Rotting Tower.wiki
+++ b/data/Rotting Tower.wiki
@@ -47,7 +47,7 @@ Rooms of Interest:
        betrayed huband of Jaribdis of the [Crones of Neriak]  
       -Volothamp Geddarm: A brass telescope that has a bedazzling kaleidoscopic effect when looked through
        THEE volo, the adventurer, who has learned many things in his travels 
-      -Dack Greyhall: A polished warhammer of sturdy looking make, etched with a long forgotten celetial symbol of Hyragul. The ancient hero that once saved the material plane from an army of demons. 
+      -Dack Greyhall: A polished warhammer of sturdy looking make, etched with a long forgotten celetial symbol of [Hyragul]. The ancient hero that once saved the material plane from an army of demons. 
       -Yygrool: A miniature taxidermy of an 8 winged water serpent with aquamarine eyes.
         One of the most powerful troll shapeshifters to have existed.
     A freed soul will seek out it's body if willing and able, otherwise pass onto the next realm in it's journey.
