adding evil group notes

--- a/data/3 Helms Deep.wiki
+++ b/data/3 Helms Deep.wiki
@@ -74,6 +74,9 @@ Refugees from [Luthadel]
             nightshade (15g per lb) (poisonous)
     -Carpenters Jerrod Louverre and 2 fellow carpenters still run the carpenter's guild        
             
+-Temple to [Kadi] (formerly temple of Elysium)
+    -Designated as a sanctuary by [Croaker]            
+            
 -North Dock
     - 1 [Order of Steel] warships are parked here, one has no cannons or control orb
     -Menagerie: animal vendor at a warehouse, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
