--- a/data/Cess.wiki
+++ b/data/Cess.wiki
@@ -5,3 +5,5 @@ the largest lake in the [Shadowfell] and where all rivers dump thier filth.
 without adequate life like a normal river, anything dumped into rivers ends up here.
 
 trash, bodily remains, waste chemicals are all mixed together here.
+
+Oblex (pg 217 of Mordekainen's) spawn here
