--- a/data/Shadowfell.wiki
+++ b/data/Shadowfell.wiki
@@ -4,8 +4,9 @@
 
 Wandering Weenies:
    - Ambush by a group of Lost (pg 233 from Mordekainens)
-   
+   - [Oscar the Headless]
 
 
 ++++Places of Interest
 [Cess]
+[Vargouille Cave]
