adding kriegers soul content

--- a/data/Gods.wiki
+++ b/data/Gods.wiki
@@ -36,4 +36,6 @@
 [Vecna]
 [Corellon]
 
++++Demon Lords
+17th layer: [Abraxas], known as the Unfathomable, is the demon lord of magic words, arcane secrets, and talismans
 
