adding needed notes

--- a/data/Abyss.wiki
+++ b/data/Abyss.wiki
@@ -6,4 +6,4 @@ Home of [Tharizdun] and [Vaprak]
 Plantlife: 
   Magic Beans (pg 152 on DM) (random effect when eaten)
   
-  
+ 1st layer: [Pazunia] 
