--- a/data/Nicosia.wiki
+++ b/data/Nicosia.wiki
@@ -12,3 +12,7 @@ Traveling through Nicosia, explorers will encounter endless zombies
 
 [Lothric]'s collection:
   -Tome of Stilled Tongue (pg 208 of DM book) (one of a set of five)
+  
+  
+++++Weenies  
+In the catacombs in a peak north of [Nicosia], [Velsharoon] is struggling to bring zombie hoards under his control, and finally starts gaining traction when souls begin pouring into the area from [Vecna]'s [Rotting Tower]. Strong minded enough to overcome the [Exanimate Stone], but feeble to [Velsharoon]'s power in his immediate area. [Velsharoon] would see anyone dead who tries to get in the way of him ruling over [Nicosia] and claiming dominance as the strongest lich of the [Shadowfell]   
