adding abyss content

--- a/data/Pazunia.wiki
+++ b/data/Pazunia.wiki
@@ -1,3 +1,17 @@
 ﻿++ Pazunia
 
 home of [Aldinach]
+(See image file for map of Pazunia)
+http://archive.wizards.com/default.asp?x=dnd/ex/20060605a&page=4
+
+
+a realm of windswept barrens and jagged tors flickering with swarms of winged demons. 
+An oppressive red sun, heavy with infinite age, bathes the layer in sweltering heat and harsh light. 
+Angry shadows curtain the plains in places
+
+
+Features:
+huge pits in the earth (that lead to other layers of the [Abyss])
+great iron strongholds 
+  -[Aldinach]'s Egg
+the River Styx.
