--- a/data/Gods.wiki
+++ b/data/Gods.wiki
@@ -39,3 +39,4 @@
 +++Demon Lords
 1st layer: [Aldinach], a reclusive demon princess who delights in the perversion of the pure and innocent.
 17th layer: [Abraxas], known as the Unfathomable, is the demon lord of magic words, arcane secrets, and talismans
+222nd layer: [Juiblex], lord of oozes and shapeless things
