adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -783,9 +783,31 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       
     [Jit] to stay in town
     [Quinn] [Kyra] and [Plosive] head to the volcano on [Kunark]
+      -rode there on hyenas
     [Tessa] continues to [Kalas]
       
     [Tessa] stealths into the palace at [Kalas] alone and encounters [House Salazar Assassins] and nearly dies from poison 
-     
-     
-     
+    
+++++Session 32
+    starting around 7pmish
+        
+    attempt to rest at the guard posts, but are rudely turned away.
+      -leave out of side and rest in the woods
+      -[Kyra] takes first watch
+      -Croc/Hyena/Humanoid Mistwraith attacks, slain by [Quinn]/[Kyra]
+       
+    [Tessa] continues sneaking around the palace in [Kalas] 
+      -nearly gets killed again by attacking the Assassins again
+      -kills one by luring [Koloss] to it polymorphed to a goldfish
+      -another fell unconcious from powered poison and is being taken care of by the others.
+    
+    [Tessa] dug up King Medresh Sarnak's grave in [Kalas] and acquired
+      Coffin has ehterium inlay
+      Golden Crown
+      Golden Necklace (worth 1000g)
+      Ring of command fire elemental  
+      
+    [Plosive],[Quinn],[Kyra] arrive back to [Luthadel] after a long rest in the woods
+      -they follow [Tessa]'s tracks to the Palace in [Kalas]
+    
+    
