--- a/data/Mines of House Zasheir.wiki
+++ b/data/Mines of House Zasheir.wiki
@@ -6,7 +6,9 @@ Various ends of the map are marked with barricades where presumably something un
 
 Future areas for digging are also planned out on this map.
 
-
+Guard Posts at the top of the mine 
+  - single room structures
+  
 
 
 Blocked off areas:
