--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -801,11 +801,7 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       -kills one by luring [Koloss] to it polymorphed to a goldfish
       -another fell unconcious from powered poison and is being taken care of by the others.
     
-    [Tessa] dug up King Medresh Sarnak's grave in [Kalas] and acquired
-      Coffin has ehterium inlay
-      Golden Crown
-      Golden Necklace (worth 1000g)
-      Ring of command fire elemental  
+    [Tessa] dug up [King Medresh Sarnak]'s grave in [Kalas] 
       
     [Plosive],[Quinn],[Kyra] arrive back to [Luthadel] after a long rest in the woods
       -they follow [Tessa]'s tracks to the Palace in [Kalas]
