--- a/data/Kalas.wiki
+++ b/data/Kalas.wiki
@@ -37,3 +37,4 @@ Areas of interest:
 
 ++++Ancient Cemetery
     -hundreds of tombstones with names in Draconic written on them, showing dates from 4000 to 3000 years ago.
+    -grave of [King Medresh Sarnak]
