--- a/data/Thargaun.wiki
+++ b/data/Thargaun.wiki
@@ -2,4 +2,9 @@
 
 Lich ruler of [Evernight]
 
-Very selfish
+Very selfish, this is HIS city. 
+
+Hides HIS collection via use of illusion that makes the objects invisible and uninteractible in thier original location so long as he continues to concentrate for them to appear elswhere.
+
+He wears wraith crowns like clothes, that emerge upon hostility toward him.
+He wears a total of 20 crowns, 5 on each limb
