--- a/data/Towns.wiki
+++ b/data/Towns.wiki
@@ -21,7 +21,7 @@
       - [Kalas]
     [Faydwer]
       - [Felwithe] (ruins)
-      - [Kaladim] (ruins)
+      - [Kaladim] (ruins) [Grogars Kaladim]
       - [Kelethin] (ruins)
       - [Oggok]
       
